# AuthService

./: .black  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_session_status.py  003_last_password_change.py
app/: main.py
app/common/: config.py  services.py
app/dependencies/: authorization.py
app/models/: session_db.py  users_db.py
app/routes/: current_user.py  profile.py  register.py  reglog.py  signing.py
app/services/: repositories.py
app/utils/: authorization.py  dependencies.py  repository.py  responses.py  setup.py  unit_of_work.py
tests/: conftest.py  utils.py
tests/functional/: test_register.py
